# YRFashion

./: .gitignore  CloudBase成本估算.md  MVP架构设计-Python后端版.md  docker-compose.yml  初步设想.md  小程序MVP规划.md  管理后台功能对照清单.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/scripts/: reseed_demo_catalog.py
backend/src/backend/: __init__.py  main.py
backend/src/backend/api/: deps.py  multipart.py  router.py
backend/src/backend/api/routes/: admin_accounts.py  admin_auth.py  admin_categories.py  admin_dashboard.py  admin_messages.py  admin_notifications.py  admin_products.py  admin_settings.py  admin_users.py  miniapp_auth.py  miniapp_categories.py  miniapp_messages.py  miniapp_products.py  (+1 more)
backend/src/backend/core/: __init__.py  config.py  security.py
backend/src/backend/db/: session.py
backend/src/backend/models/: __init__.py  admin_user.py  message.py  miniapp_user.py  notification_setting.py  product.py  shop_setting.py
backend/src/backend/schemas/: admin_account.py  auth.py  category.py  dashboard.py  message.py  miniapp.py  notification.py  product.py  setting.py  user.py
backend/src/backend/services/: content_safety.py  local_storage.py  miniapp_auth.py  miniapp_catalog.py  notification_sender.py  storage.py
backend/tests/: .gitignore  conftest.py  test_admin_auth.py  test_admin_categories.py  test_admin_notifications.py  test_admin_operations.py  test_admin_products.py  test_health.py  test_miniapp_auth.py  test_miniapp_messages.py  test_miniapp_products.py  test_miniapp_storefront.py  test_security.py  test_storage.py
(+177 files in other folders)
