[project]
name = "backend"
version = "0.1.0"
description = "YRFasion MVP backend service"
readme = "README.md"
authors = [
    { name = "twx", email = "twx843571091@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "cos-python-sdk-v5>=1.9.38",
    "fastapi>=0.135.1",
    "passlib>=1.7.4",
    "pymysql>=1.1.2",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
    "pillow>=12.1.1",
]

[project.scripts]
backend = "backend.main:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
